--- a/config.env
+++ b/config.env
@@ -1,14 +1,14 @@
-DATABASE_URL= "postgresql://postgres:17t2JtI6ra4louwmfu2Z@containers-us-west-13.railway.app:6580/railway"
+DATABASE_URL= ""
 ANTI_LINK = "FALSE"
 LOGS = false #to see logs
 ANTI_LINK = kick # antilink action.
-SESSION_ID = "jsl~0de8e0uxmb8be0a187817f30aec18dffa48b"
+SESSION_ID = "jsl~cc1d1YAuX0be3b3a70361c71d9499c2e2384"
 LANG = "en" #language
 HANDLER = "false"
 RMBG_KEY = false
 PACKNAME = "Aswin-MD"
 AUTHOR = "Aswin Sparky"
-SUDO = "917012984396,918156984396,917593919575,919544248199"
+SUDO = "917012984396"
 OWNER_NAME = "Aswin Sparky"
 BOT_NAME = "Aswin-MD"
 WORK_TYPE = "public"
