--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-   "start": "node index.js"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "pm2 start . --attach --name SPERKY"
   },
   "keywords": [
    "termux",
