--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
   "author": "ASWIN SPARKY",
   "license": "GPL-3.0",
   "dependencies": {
-   "@whiskeysockets/baileys": "latest",
+   "@whiskeysockets/baileys": "6.4.1",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@neeraj-x0/textpro": "^1.0.3",
     "awesome-phonenumber": "^3.4.0",
     "bitly": "^7.1.2",
     "browser-id3-writer": "^4.4.0",
-    "crypto-js": "^4.1.1",
+    "crypto-js": "latest",
     "dotenv": "^16.0.0",
-    "express": "^4.18.2",
+    "express": "latest",
     "ffmpeg": "^0.0.4",
     "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.2",
@@ -74,9 +74,7 @@
     "perf_hooks":"^0.0.1",
     "csv-parse":"^5.3.5",
     "js-base64":"^3.7.5",
-    "openai":"^3.2.1",
-   "express": "latest",
-   "aes256":"1.1.0"
+    "openai":"^3.2.1"
      },
  "directories": {
   "lib": "lib",
