--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@ DATABASE_URL= ""
 ANTI_LINK = "FALSE"
 LOGS = false #to see logs
 ANTI_LINK = kick # antilink action.
-SESSION_ID = "jsl~cc1d1YAuX0be3b3a70361c71d9499c2e2384"
+SESSION_ID = ""
 LANG = "en" #language
 HANDLER = "false"
 RMBG_KEY = false
