--- a/config.env
+++ b/config.env
@@ -3,12 +3,12 @@ ANTI_LINK = "FALSE"
 LOGS = false #to see logs
 ANTI_LINK = kick # antilink action.
 SESSION_ID = "jsl~cc1d1YAuX0be3b3a70361c71d9499c2e2384"
-LANG = "en" #language
-HANDLER = "false"
+LANG = "en" 
+HANDLERS = "false"
 RMBG_KEY = false
-PACKNAME = "Aswin-MD"
+PACKNAME = "X-BOT-MD V2"
 AUTHOR = "Aswin Sparky"
 SUDO = "917012984396"
 OWNER_NAME = "Aswin Sparky"
-BOT_NAME = "Aswin-MD"
+BOT_NAME = "X-BOT-MD V2"
 WORK_TYPE = "public"
