--- a/config.env
+++ b/config.env
@@ -3,7 +3,7 @@ ANTI_LINK = "FALSE"
 LOGS = false #to see logs
 ANTI_LINK = kick # antilink action.
 SESSION_ID = "jsl~cc1d1YAuX0be3b3a70361c71d9499c2e2384"
-LANG = "en" 
+LANG = "en" #language
 HANDLERS = "false"
 RMBG_KEY = false
 PACKNAME = "X-BOT-MD V2"
