--- a/config.env
+++ b/config.env
@@ -4,7 +4,7 @@ LOGS = false #to see logs
 ANTI_LINK = kick # antilink action.
 SESSION_ID = "jsl~cc1d1YAuX0be3b3a70361c71d9499c2e2384"
 LANG = "en" #language
-HANDLERS = "false"
+HANDLERS = "."
 RMBG_KEY = false
 PACKNAME = "X-BOT-MD V2"
 AUTHOR = "Aswin Sparky"
